--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@next/mdx": "^15.4.5",
+    "@next/third-parties": "^15.4.5",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "framer-motion": "^12.23.12",
     "gray-matter": "^4.0.3",
     "next": "15.4.5",
     "next-mdx-remote": "^5.0.0",
